--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="profile__data">
                 <div class="profile__border">
                     <div class="profile__perfil">
-                        <img src="/media/perfil/perfil.png" alt="">
+                        <img src="media/perfil/perfil.png" alt="">
                     </div>
                 </div>
                 <h2 class="profile__name">
@@ -58,7 +58,7 @@
             </div>--> 
 
             <div class="profile__buttons">
-                <a href="/media/CV-Cabrera Lucia.pdf" class="button" download="">
+                <a href="media/CV-Cabrera Lucia.pdf" class="button" download="">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
@@ -335,7 +335,7 @@
     </footer>
 
     <!--JS-->
-    <script src="/js/scrollreveal.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/scrollreveal.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
